Update pom.xml and App.java